# jobex

./: .gitignore
Backend/jobex_scraper/: Cargo.toml
Backend/jobex_scraper/src/: browser.rs  lib.rs  main.rs  scrapers.rs
