[package]
name = "jobex_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime", "_fetcher-native-tokio"], default-features = false, branch = "main"}
chromiumoxide_cdp = "0.6.0"
tokio = "1.36.0"
futures = "0.3.30"
async-trait = "0.1.80"
reqwest = "0.12.4"
serde_json = "1.0.117"
